[tool.poetry]
name = "muffin-mongo"
version = "0.6.1"
description = "MongoDB support for Muffin framework."
readme = "README.rst"
license = "MIT"
authors = ["Kirill Klenov <horneds@gmail.com>"]
keywords = ["mongodb", "muffin", "asyncio", "asgi", "web"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: AsyncIO",
]
homepage = "https://github.com/klen/muffin-mongo"
repository = "https://github.com/klen/muffin-mongo"

[tool.poetry.dependencies]
python = "^3.9"
muffin = "^0"
motor = "*"

[tool.poetry.group.tests.dependencies]
ruff = "*"
pytest = "*"
pytest-mypy = "*"
pytest-aio = { version = "*", extras = ["curio", "trio"] }

[tool.poetry.group.dev.dependencies]
pre-commit = "*"

[tool.pytest.ini_options]
addopts = "-xsv tests.py"
log_cli = true

[tool.mypy]
packages = ["muffin_mongo"]
install_types = true
non_interactive = true
ignore_missing_imports = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = ppy39,py310,py311,py312,pypy39

[testenv]
deps = -e .[tests]
commands =
	pytest --mypy tests.py

[testenv:pypy39]
deps = -e .[tests]
commands =
	pytest tests.py
"""

[tool.ruff]
fix = true
line-length = 100
target-version = "py39"
exclude = [".venv", "docs", "examples"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D",
  "UP",
  "ANN",
  "DJ",
  "EM",
  "RSE",
  "SLF",
  "RET",
  "S101",
  "PLR2004",
  "PLR0912",
  "N804",
  "A003",
  "TRY003",
]
