[bumpversion]
commit = True
current_version = 0.3.3
files = muffin_mongo/__init__.py
tag = True
tag_name = {new_version}

[wheel]
python-tag = py3

[metadata]
name = muffin-mongo
version = attr: muffin_mongo.__version__
url = https://github.com/klen/muffin-mongo
description = MongoDB support for Muffin framework.
long_description = file: README.rst
author = Kirill Klenov
author_email = horneds@gmail.com
license = MIT
license_files = LICENSE
keywords = mongodb, muffin, asyncio, asgi, web
project_urls = 
	Documentation = https://github.com/klen/muffin-mongo
	Source code = https://github.com/klen/muffin-mongo
	Issue tracker = https://github.com/klen/muffin-mongo/issues
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Framework :: AsyncIO

[options]
packages = muffin_mongo
include_package_data = True
python_requires = >= 3.7
install_requires = 
	muffin      >= 0.50
	motor       >= 2.3.1

[options.package_data]
muffin_mongo = 
	py.typed

[options.extras_require]
tests = 
	pytest
	pytest-aio
	pytest-mypy
build = 
	bump2version

[tool:pytest]
addopts = -xsv --mypy

[tox:tox]
envlist = py37,py38,py39

[testenv]
deps = -e .[tests]
commands = 
	pytest tests.py

[pylama]
ignore = D211

[pylama:setup.py]
ignore = D

[pylama:tests.py]
ignore = D

[pytest]
addopts = -s

[mypy]

[mypy-motor.*]
ignore_missing_imports = True
